2007-01-28  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/itfile.cpp, itpp/comm/convcode.cpp,
	itpp/comm/convcode.h, itpp/comm/interleave.h,
	itpp/comm/punct_convcode.cpp, itpp/comm/punct_convcode.h,
	itpp/comm/turbo.cpp, itpp/comm/turbo.h, itpp/signal/resampling.h,
	itpp/srccode/gmm.cpp: Replaced long with int, since long and int
	have the same sizes on most IT++ supported architectures. If there
	is a need for 64-bit integers, due to portability
	reasons (u)int64_t type should be used instead of long.

2007-01-27  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/bessel/hyperg.cpp, itpp/comm/modulator_nd.cpp: Fixes
	to avoid warnings on possibly uninitialised variables

2007-01-26  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/math/elem_math.cpp, itpp/base/math/elem_math.h:
	Replaced long with int in binom_i() and gcd() functions, since
	long and int have the same sizes on most IT++ supported
	architectures. If there is a need for 64-bit integers, (u)int64_t
	type should be used instead of long.

2007-01-26  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/ldpc.cpp: Fix to avoid compiler warning

2007-01-26  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/binfile.cpp: Fixed a minor bug, which caused infinite
	loop of itfile_test on Solaris SPARC with GCC 3.4.5

	* itpp/base/mat.h, itpp/base/vec.h, itpp/comm/crc.cpp,
	itpp/comm/crc.h: Added some missing const keywords, as suggested
	in feature request [1644569]. Thanks to Christian for providing a
	patch.

	* itpp/base/binfile.cpp, itpp/base/binfile.h, itpp/base/itfile.h:
	long type replaced with int or int64_t where necessary due to
	portability issues. Fixed assumptions of type sizes in << and >>
	operators replaced with size dependent read_endian() and
	write_endian() templated functions. Minor cosmetic changes.
	
2007-01-25  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac, itpp/base/ittypes.h, itpp/config_msvc.h,